force-app/main/default/objects/Research_Output__c/Research_Output__c.object-meta.xml
<CustomObject>
    <label>Research Output</label>
    <nameField>
        <label>Research Output ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Research Outputs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>