force-app/main/default/objects/Research_Output__c/fields/Abstract__c.field-meta.xml
<CustomField>
    <fullName>Abstract__c</fullName>
    <label>Abstract</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>