force-app/main/default/objects/Research_Output__c/fields/Activity_date__c.field-meta.xml
<CustomField>
    <fullName>Activity_date__c</fullName>
    <label>Activity date</label>
    <type>Date</type>
</CustomField>