force-app/main/default/objects/Research_Output__c/fields/Affiliation_Statement_Available__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Statement_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affiliation Statement Available</label>
    <type>Checkbox</type>
</CustomField>