force-app/main/default/objects/Research_Output__c/fields/Article_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Article_Application_Number__c</fullName>
    <label>Article/Application Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>