force-app/main/default/objects/Research_Output__c/fields/Authors_Creators__c.field-meta.xml
<CustomField>
    <fullName>Authors_Creators__c</fullName>
    <label>Authors/Creators</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>