force-app/main/default/objects/Research_Output__c/fields/Chapter_Report_Number__c.field-meta.xml
<CustomField>
    <fullName>Chapter_Report_Number__c</fullName>
    <label>Chapter/Report Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>