force-app/main/default/objects/Research_Output__c/fields/Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Collection_Date__c</fullName>
    <label>Collection Date</label>
    <type>Date</type>
</CustomField>