force-app/main/default/objects/Research_Output__c/fields/Culturally_Sensitive__c.field-meta.xml
<CustomField>
    <fullName>Culturally_Sensitive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Culturally Sensitive</label>
    <type>Checkbox</type>
</CustomField>