force-app/main/default/objects/Research_Output__c/fields/Curated_Exhibition_or_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Curated_Exhibition_or_Event_Type__c</fullName>
    <label>Curated Exhibition or Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Source</valueSetName>
    </valueSet>
</CustomField>