force-app/main/default/objects/Research_Output__c/fields/Document_location_ERA_copy__c.field-meta.xml
<CustomField>
    <fullName>Document_location_ERA_copy__c</fullName>
    <label>Document location – ERA copy</label>
    <type>Url</type>
</CustomField>