force-app/main/default/objects/Research_Output__c/fields/Document_Path_Figshare__c.field-meta.xml
<CustomField>
    <fullName>Document_Path_Figshare__c</fullName>
    <label>Document Path/Figshare</label>
    <type>Url</type>
</CustomField>