force-app/main/default/objects/Research_Output__c/fields/DOI__c.field-meta.xml
<CustomField>
    <fullName>DOI__c</fullName>
    <label>DOI</label>
    <type>Url</type>
</CustomField>