force-app/main/default/objects/Research_Output__c/fields/Electronic_Location__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Location__c</fullName>
    <label>Electronic Location</label>
    <type>Url</type>
</CustomField>