force-app/main/default/objects/Research_Output__c/fields/ERA_Eligible__c.field-meta.xml
<CustomField>
    <fullName>ERA_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ERA Eligible</label>
    <type>Checkbox</type>
</CustomField>