force-app/main/default/objects/Research_Output__c/fields/Institutional_Submission_Notes__c.field-meta.xml
<CustomField>
    <fullName>Institutional_Submission_Notes__c</fullName>
    <label>Institutional Submission Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>