force-app/main/default/objects/Research_Output__c/fields/Is_Revision__c.field-meta.xml
<CustomField>
    <fullName>Is_Revision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Revision</label>
    <type>Checkbox</type>
</CustomField>