force-app/main/default/objects/Research_Output__c/fields/ISBN_10__c.field-meta.xml
<CustomField>
    <fullName>ISBN_10__c</fullName>
    <label>ISBN-10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>