force-app/main/default/objects/Research_Output__c/fields/ISSN__c.field-meta.xml
<CustomField>
    <fullName>ISSN__c</fullName>
    <label>ISSN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>