force-app/main/default/objects/Research_Output__c/fields/Issue_Number__c.field-meta.xml
<CustomField>
    <fullName>Issue_Number__c</fullName>
    <label>Issue Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>