force-app/main/default/objects/Research_Output__c/fields/Live_Performance_Creative_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Live_Performance_Creative_Work_Type__c</fullName>
    <label>Live Performance - Creative Work Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Music (live performance)</fullName>
            </value>
            <value>
                <fullName>Play (live performance)</fullName>
            </value>
            <value>
                <fullName>Dance (live performance)</fullName>
            </value>
            <value>
                <fullName>Other live performance of creative work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>