force-app/main/default/objects/Research_Output__c/fields/Locked_And_Verified__c.field-meta.xml
<CustomField>
    <fullName>Locked_And_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked And Verified</label>
    <type>Checkbox</type>
</CustomField>