force-app/main/default/objects/Research_Output__c/fields/Manual_Override_Notes__c.field-meta.xml
<CustomField>
    <fullName>Manual_Override_Notes__c</fullName>
    <label>Manual Override Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>