force-app/main/default/objects/Research_Output__c/fields/Notes_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Notes_Dimensions__c</fullName>
    <label>Notes/Dimensions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>