force-app/main/default/objects/Research_Output__c/fields/Number_Of_Pieces_Duration__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Pieces_Duration__c</fullName>
    <label>Number Of Pieces/Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>