force-app/main/default/objects/Research_Output__c/fields/Original_Creative_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Original_Creative_Work_Type__c</fullName>
    <label>Original Creative Work Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visual art work</fullName>
            </value>
            <value>
                <fullName>Design/architectural work</fullName>
            </value>
            <value>
                <fullName>Textual creative work</fullName>
            </value>
            <value>
                <fullName>Other creative work (including scholarly editions and scholarly translations)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>