force-app/main/default/objects/Research_Output__c/fields/Owned_by_My_Uni__c.field-meta.xml
<CustomField>
    <fullName>Owned_by_My_Uni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owned by My Uni</label>
    <type>Checkbox</type>
</CustomField>