force-app/main/default/objects/Research_Output__c/fields/Pagination_Begin__c.field-meta.xml
<CustomField>
    <fullName>Pagination_Begin__c</fullName>
    <label>Pagination Begin</label>
    <length>18</length>
    <type>Text</type>
</CustomField>