force-app/main/default/objects/Research_Output__c/fields/Parent_Research_Output__c.field-meta.xml
<CustomField>
    <fullName>Parent_Research_Output__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Research Output</label>
    <referenceTo>Research_Output__c</referenceTo>
    <relationshipLabel>Research Outputs</relationshipLabel>
    <relationshipName>Research_Outputs</relationshipName>
    <type>Lookup</type>
</CustomField>