force-app/main/default/objects/Research_Output__c/fields/Parent_Title__c.field-meta.xml
<CustomField>
    <fullName>Parent_Title__c</fullName>
    <label>Parent Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>