force-app/main/default/objects/Research_Output__c/fields/Place_of_Conference__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Conference__c</fullName>
    <label>Place of Conference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>