force-app/main/default/objects/Research_Output__c/fields/Place_Of_Publication_Location__c.field-meta.xml
<CustomField>
    <fullName>Place_Of_Publication_Location__c</fullName>
    <label>Place Of Publication / Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>