force-app/main/default/objects/Research_Output__c/fields/Publication_reporting_category__c.field-meta.xml
<CustomField>
    <fullName>Publication_reporting_category__c</fullName>
    <label>Publication reporting category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1 - Books - Authored research</fullName>
            </value>
            <value>
                <fullName>A2 - Books - Authored other</fullName>
            </value>
            <value>
                <fullName>A3 - Books - Edited</fullName>
            </value>
            <value>
                <fullName>A4 - Books - Revision/New Edition</fullName>
            </value>
            <value>
                <fullName>B - Book Chapter</fullName>
            </value>
            <value>
                <fullName>BB - Non-DEST book chapter</fullName>
            </value>
            <value>
                <fullName>C1 - Journal Articles</fullName>
            </value>
            <value>
                <fullName>C2 - Journal Articles - Other refereed contribution to a Scholarly Journal</fullName>
            </value>
            <value>
                <fullName>C3 - Journal Articles - Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>