force-app/main/default/objects/Research_Output__c/fields/Quality_Indicators__c.field-meta.xml
<CustomField>
    <fullName>Quality_Indicators__c</fullName>
    <label>Quality Indicators</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>