force-app/main/default/objects/Research_Output__c/fields/Recorded_or_Rendered_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Recorded_or_Rendered_Work_Type__c</fullName>
    <label>Recorded or Rendered Work Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Film, video</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Inter-arts</fullName>
            </value>
            <value>
                <fullName>Digital creative work</fullName>
            </value>
            <value>
                <fullName>Website/web exhibition</fullName>
            </value>
            <value>
                <fullName>Other recorded/rendered creative work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>