force-app/main/default/objects/Research_Output__c/fields/Research_Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Research_Report_Type__c</fullName>
    <label>Research Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public sector research report</fullName>
            </value>
            <value>
                <fullName>Industry research report</fullName>
            </value>
            <value>
                <fullName>Not-for-profit research report</fullName>
            </value>
            <value>
                <fullName>Other research report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>