force-app/main/default/objects/Research_Output__c/fields/Research_Statement__c.field-meta.xml
<CustomField>
    <fullName>Research_Statement__c</fullName>
    <label>Research Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>