force-app/main/default/objects/Research_Output__c/fields/Researcher_Profile__c.field-meta.xml
<CustomField>
    <fullName>Researcher_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Researcher Profile</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Research Outputs</relationshipLabel>
    <relationshipName>Research_Outputs</relationshipName>
    <type>Lookup</type>
</CustomField>