force-app/main/default/objects/Research_Output__c/fields/Sensitive_Handling_Note__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Handling_Note__c</fullName>
    <label>Sensitive Handling Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>