force-app/main/default/objects/Research_Output__c/fields/Staff_Reference__c.field-meta.xml
<CustomField>
    <fullName>Staff_Reference__c</fullName>
    <label>Staff Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>