force-app/main/default/objects/Research_Output__c/fields/Standard_Number__c.field-meta.xml
<CustomField>
    <fullName>Standard_Number__c</fullName>
    <label>Standard Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>