force-app/main/default/objects/Research_Output__c/fields/Translated__c.field-meta.xml
<CustomField>
    <fullName>Translated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Translated</label>
    <type>Checkbox</type>
</CustomField>