force-app/main/default/objects/Research_Output__c/fields/Triadic__c.field-meta.xml
<CustomField>
    <fullName>Triadic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Triadic</label>
    <type>Checkbox</type>
</CustomField>