force-app/main/default/objects/Research_Output__c/fields/Type_of_Applied_Measure__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Applied_Measure__c</fullName>
    <label>Type of Applied Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patent</fullName>
            </value>
            <value>
                <fullName>Patent Family</fullName>
            </value>
            <value>
                <fullName>Research commercialisation income</fullName>
            </value>
            <value>
                <fullName>Plant Breeders Rights</fullName>
            </value>
            <value>
                <fullName>NHMRC endorsed guidelines</fullName>
            </value>
            <value>
                <fullName>Registered Design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>