force-app/main/default/objects/Research_Output__c/fields/Year_Available__c.field-meta.xml
<CustomField>
    <fullName>Year_Available__c</fullName>
    <label>Year Available</label>
    <type>Date</type>
</CustomField>