force-app/main/default/objects/Research_Output__c/fields/Year_Created__c.field-meta.xml
<CustomField>
    <fullName>Year_Created__c</fullName>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>