force-app/main/default/objects/Research_Output__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Authors_Creators__c</columns>
    <columns>Confidential__c</columns>
    <columns>ISSN__c</columns>
    <columns>Pagination_Begin__c</columns>
    <columns>Pagination_End__c</columns>
    <columns>Research_Output_ID__c</columns>
    <columns>Research_Output_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>